--- a/Api/.env
+++ b/Api/.env
@@ -2,3 +2,4 @@ DB_USER=postgres
 DB_PASSWORD=admin
 DB_HOST=localhost
 PORT=3001
+DB_DEPLOY=postgresql://postgres:k5f1tKjdBnoW2IZrncKq@containers-us-west-51.railway.app:6186/railway
