--- a/Api/.env
+++ b/Api/.env
@@ -2,4 +2,4 @@ DB_USER=postgres
 DB_PASSWORD=admin
 DB_HOST=localhost
 PORT=3001
-DB_DEPLOY=postgresql://postgres:k5f1tKjdBnoW2IZrncKq@containers-us-west-51.railway.app:6186/railway
+DB_DEPLOY=ep-falling-butterfly-09673333.us-east-2.aws.neon.tech:5432/Dallas
