--- a/Api/.env
+++ b/Api/.env
@@ -2,4 +2,4 @@ DB_USER=postgres
 DB_PASSWORD=admin
 DB_HOST=localhost
 PORT=3001
-DB_DEPLOY=ep-falling-butterfly-09673333.us-east-2.aws.neon.tech:5432/Dallas
+DB_DEPLOY=postgres://fl0user:GsjofKgWT43l@ep-falling-butterfly-09673333.us-east-2.aws.neon.tech:5432/Dallas?sslmode=require
