--- a/Api/vercel.json
+++ b/Api/vercel.json
@@ -1,13 +1,16 @@
 {
+    "version":2,
     "builds":[
         {
-            "src": "./src",
+            "src": "./index.js",
             "use":"@vercel/node"
         }
     ],
-    "routes":{
+    "routes":[
+    {
         "src": "/(.*)",
-        "foods":"/foods"
+        "dest":"/"
     }
+    ]
 
 }
