--- a/Api/vercel.json
+++ b/Api/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds":[
         {
-            "src": "./index.js",
+            "src": "./src/app.js",
             "use":"@vercel/node"
         }
     ],
