--- a/Api/package.json
+++ b/Api/package.json
@@ -1,8 +1,11 @@
 {
    "scripts": {
-      "start": "node ./index.js",
+      "start": "node index.js",
       "test": "jest --verbose --detectOpenHandles",
       "dev": "nodemon ./index.js"
+   },
+   "engines": {
+      "node": "14.x"
    },
    "dependencies": {
       "body-parser": "^1.20.2",
