--- a/Client/package.json
+++ b/Client/package.json
@@ -17,7 +17,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
 
-    "sweetalert2": "^11.7.27"
+    "sweetalert2": "^11.7.27",
 
     "react-scroll": "^1.8.9"
 
